--- a/clientSide/pages/add.html
+++ b/clientSide/pages/add.html
@@ -6,8 +6,9 @@
     <title>new contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
-    <link rel="stylesheet" href="css/index.css">
+    <!-- <link rel="stylesheet" href="css/index.css"> -->
     <link rel="stylesheet" href="../css/add.css">
+    <link rel="stylesheet" href="../index.html">
 </head>
 <body>
     <div class="container">
@@ -27,18 +28,22 @@
 
                 </div>
                 <div class="details">
-                    <input type="text" placeholder="Contact name">
-                    <input type="text" placeholder="Phone number">
+                    <input type="text" placeholder="Contact name" id="name">
+                    <input type="text" placeholder="Phone number" id="phone">
                     <input type="text" placeholder="Email">
                     <input type="text" placeholder="Address">
                 </div>
             </div>
             <div class="btn">
                 <button>Clear</button>
-                <button>Save</button>
+                <button onclick="details()">Save</button>
             </div>
         </div>
+        </div>
+        <!-- <div class="detailss" id="detailss"> -->
+
     </div>
+    <script src="../js/index.js"></script>
     
 </body>
 </html>
